   the arguments to FromDevice and ToDevice are the same as FromBPF and
   ToBPF.)

** Renamed the SetIPAddress element to StoreIPAddress. Added a different
   SetIPAddress element.

* Incompatible C++ API changes

** Reorganized Linux kernel polling patches. If you have a previous version
   of Click, you must unapply the old kernel patch and apply the new kernel
   patch before compiling.

** Made configuration argument parsing more uniform among elements. For
   example, every configuration argument is always a comma-separated
   string. This is enforced by passing a vector of strings to the
   `configure' method: `cp_argvec' is called before the `configure' method
   is called. Changed Element method `int configure(const String &,
   ErrorHandler *)' to `int configure(const Vector<String> &, ErrorHandler
   *)', and updated elements.

** The `cp_DATATYPE' functions take pointers instead of references. This
   makes using them much clearer.

** Changed Element method `bool configure_first() const' to `int
   configure_phase() const'. Now element classes can specify their relative
   configuration and initialization order; for example, ToDevice specifies
   that it should be configured and initialized after any FromDevices.

** Removed user-level Element method `select_fd()'. Replaced with
   `add_select(fd, mask)' and `remove_select(fd, mask)', so elements can
   listen to any number of file descriptors for reading, writing, or both.
   (`mask' is either `SELECT_READ', `SELECT_WRITE', or
   `SELECT_READ|SELECT_WRITE'.)

** Other small changes and method renamings should have limited impact. For
   instance, renamed `Element::number()' to `Element::elementno()'; removed
   `Element::use()' and `Element::unuse()'; renamed
   `Element::change_configuration()' to `Element::set_configuration()' and
   `Element::set_configuration_argument()'.

* General

** Added new `tickets' handler, available by default on every element.
